--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,16 +25,18 @@
 				<p>"Ce qui se passe à la Salle de la Thérésiére : découvrez nos actualités."</p>
 			</div>
 		</div>
-		<div class="social-icons-section">
-			<h2>Nos réseaux sociaux</h2>
-			{{ include('layout/_social_links.html.twig') }}
+		<div class="social-reviews-container">
+			<section class="google-reviews">
+				<h2>Ce que nos clients disent</h2>
+				<p>section en cours de construction</p>
+				{# <div id="elfsight-widget-xyz"></div> #}
+
+			</section>
+			<div class="social-icons-section">
+				<h2>Nos réseaux sociaux</h2>
+				{{ include('layout/_social_links.html.twig') }}
+			</div>
 		</div>
-		<section class="google-reviews">
-			<h2>Ce que nos clients disent</h2>
-			<p>section en cours de construction</p>
-			{# <div id="elfsight-widget-xyz"></div> #}
-			
-		</section>
 	</div>
 
 
