--- a/templates/categorie/show.html.twig
+++ b/templates/categorie/show.html.twig
@@ -1,26 +1,27 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Catégories{% endblock %}
+{% block title %}Catégories
+{% endblock %}
 
 {% block body %}
-    <h1>Catégories</h1>
+	<h1>Catégories</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ categorie.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ categorie.nom }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<div class="categorie-details-container">
+		<ul class="categorie-details-list">
+			<li class="detail-item">
+				<strong>Id :</strong>
+				<span>{{ categorie.id }}</span>
+			</li>
+			<li class="detail-item">
+				<strong>Nom :</strong>
+				<span>{{ categorie.nom }}</span>
+			</li>
+		</ul>
+	</div>
 
-    <a class="btn-principal"href="{{ path('app_categorie_index') }}">Retour à la liste</a>
+	<a class="btn-principal" href="{{ path('app_categorie_index') }}">Retour à la liste</a>
 
-    <a class="btn-principal"href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
+	<a class="btn-principal" href="{{ path('app_categorie_edit', {'id': categorie.id}) }}">Modifier</a>
 
-    {{ include('categorie/_delete_form.html.twig') }}
+	{{ include('categorie/_delete_form.html.twig') }}
 {% endblock %}
