--- a/templates/visite/edit.html.twig
+++ b/templates/visite/edit.html.twig
@@ -15,9 +15,7 @@
 		</form>
 	{% endif %}
 
-	<button class="btn-principal">
-		<a href="{{ path('app_visite_index') }}">Retour à la liste</a>
-	</button>
+		<a class="btn-principal" href="{{ path('app_visite_index') }}">Retour à la liste</a>
 	{% if is_granted('ROLE_ADMIN') %}
 		{{ include('visite/_delete_form.html.twig') }}
 	{% endif %}
